test/classes/errors/nilability-init-var/init-var-oknil-unmanaged-from-nonnil-borrowed.good
init-var-oknil-unmanaged-from-nonnil-borrowed.chpl:9: error: cannot initialize variable 'lhs' of type 'unmanaged MyClass?' from a 'borrowed MyClass'
